--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 
     <script defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCS-d5dC7YyDDgubxhMAf9178mkADgmnYQ&callback=initMap">
+    src="https://maps.googleapis.com/maps/api/js?key=[yourApiKey]&callback=initMap">
 </script>
     <script src="/app.js"></script>
 </body>
